@@ -30,6 +30,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #5387: Fixed mmap.move crash by integer overflow.
+
 - Issue #5595: Fix UnboundedLocalError in ntpath.ismount().
 
 - Issue #1174606: Calling read() without arguments of an unbounded file
